--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <title>Rickshaw Calculator</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-route.js"></script>
     <script src="js/app.js"></script>
@@ -14,10 +14,10 @@
 <body>
     <h1>Rickshaw Calculator</h1>
     <nav>
-        <!-- <ul>
-            <li><a href="#/available">Available</a></li>
-            <li><a href="#/borrowed">Borrowed</a></li>
-        </ul> -->
+        <ul>
+            <li><a href="#/calc">Calculator</a></li>
+            <!-- <li><a href="#/borrowed">Borrowed</a></li> -->
+        </ul>
     </nav>
     <!-- Main content area, to be populated with templates -->
     <main ng-view></main>
